--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native/admob-free": "^5.15.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/date-picker": "^5.14.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "cordova-admob-sdk": "^0.24.1",
     "cordova-android": "7.1.4",
+    "cordova-plugin-admob-free": "^0.27.0",
     "cordova-plugin-datepicker": "^0.9.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
@@ -33,6 +36,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-promise-polyfill": "0.0.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "sharp": "^0.23.1",
@@ -77,7 +81,10 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-datepicker": {}
+      "cordova-plugin-datepicker": {},
+      "cordova-plugin-admob-free": {
+        "ADMOB_APP_ID": "ca-app-pub-5187363226010265~4055496592"
+      }
     },
     "platforms": [
       "android"
